--- a/LKaifer_BugTracker/Views/Home/Index.cshtml
+++ b/LKaifer_BugTracker/Views/Home/Index.cshtml
@@ -44,7 +44,7 @@
     }
 
     .panel-statistics {
-        background-color: #fd9426;
+        background: linear-gradient(to right, #ff9900 0%, #ffff00 100%);
         color: white
     }
 
@@ -54,7 +54,7 @@
     }
 
     .panel-red {
-        background-color: #e53238;
+        background: linear-gradient(to left, #0000ff 0%, #99ccff 100%);
         color: white;
     }
 
