--- a/LKaifer_BugTracker/Views/Projects/MyIndex.cshtml
+++ b/LKaifer_BugTracker/Views/Projects/MyIndex.cshtml
@@ -91,7 +91,7 @@
 
             @if (User.IsInRole("Manager") || (User.IsInRole("Admin")))
             {
-        <button type="button" class="grow" style="background-color:#E53238; color:antiquewhite !important">
+        <button type="button" class="grow" style="background-color:#0b7bc1; color:antiquewhite !important">
                 @Html.ActionLink("Create A New Project", "Create", "Projects")
             
         </button>}
