--- a/LKaifer_BugTracker/Views/Tickets/Create.cshtml
+++ b/LKaifer_BugTracker/Views/Tickets/Create.cshtml
@@ -84,7 +84,7 @@
             <input name="files" type="file" class="form-control" id="fileUpload" multiple />
         </div>
     </div>
-    <button type="submit" class="shrink" style="background-color:#E53238; color:antiquewhite">
+    <button type="submit" class="shrink" style="background-color:#0b7bc1; color:antiquewhite">
         Create New Ticket
     </button>
 </div>
