--- a/LKaifer_BugTracker/Views/Tickets/Details.cshtml
+++ b/LKaifer_BugTracker/Views/Tickets/Details.cshtml
@@ -9,128 +9,146 @@
     @*<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>*@
 
     <style>
-            .agile_w3l_social_media_text_img {
-                width: 33.33333333%;
-            }
+        .agile_w3l_social_media_text_img {
+            width: 33.33333333%;
+        }
 
-            .avatar {
-                max-height: 30px;
-                max-width: 30px;
-            }
+        .avatar {
+            max-height: 30px;
+            max-width: 30px;
+        }
 
-            .socail_grid_agile.facebook {
-                background: #3d5da2;
-                height: 200px !important;
-            }
+        .socail_grid_agile.facebook {
+            background: #3d5da2;
+            height: 200px !important;
+        }
 
-            .socail_grid_agile.twitter {
-                background: #1da1f2;
-                height: 200px !important;
-            }
+        .socail_grid_agile.twitter {
+            background: #1da1f2;
+            height: 200px !important;
+        }
 
-            .socail_grid_agile.gmail {
-                background: #ea4335;
-                height: 200px !important;
-            }
+        .socail_grid_agile.gmail {
+            background: #ea4335;
+            height: 200px !important;
+        }
 
-            .socail_grid_agile.dribble {
-                background: #ea4c89;
-                height: 200px !important
-            }
+        .socail_grid_agile.dribble {
+            background: #ea4c89;
+            height: 200px !important
+        }
 
-            .img-responsive teamAvatar, .thumbnail > img, .thumbnail a > img, .carousel-inner > .item > img, .carousel-inner > .item > a > img {
-                display: block;
-                width: 90px;
-                height: 90px;
-            }
+        .img-responsive teamAvatar, .thumbnail > img, .thumbnail a > img, .carousel-inner > .item > img, .carousel-inner > .item > a > img {
+            display: block;
+            width: 90px;
+            height: 90px;
+        }
 
-            a.collapsed > i.fa-chevron-up {
-                transform: rotate(180deg);
-            }
+        a.collapsed > i.fa-chevron-up {
+            transform: rotate(180deg);
+        }
 
-            div.panel-heading {
-                cursor: move;
-            }
+        div.panel-heading {
+            cursor: move;
+        }
 
-            a.badge.removeTicketAttach {
-                background-color: darkred;
-                color: lightgray;
-            }
+        a.badge.removeTicketAttach {
+            background-color: darkred;
+            color: lightgray;
+        }
 
-                a.badge.removeTicketAttach:hover {
-                    background-color: orangered;
-                    color: white;
-                }
-
-            a.badge.downloadTicketAttach {
-                background-color: darkblue;
-                color: lightgray;
-            }
-
-                a.badge.downloadTicketAttach:hover {
-                    background-color: blue;
-                    color: white;
-                }
-
-            a.badge.previewTicketAttach {
-                background-color: black;
-                color: gray;
-            }
-
-                a.badge.previewTicketAttach:hover {
-                    background-color: dimgray;
-                    color: white;
-                }
-
-            a.badge:hover {
-                background-color: lightgray;
-                color: blue;
-            }
-
-            a#addAttachBtn:hover {
-                background-color: #cae3f7 !important;
-                color: #007ee5;
-            }
-
-            i.fa-envelope-o {
-                cursor: pointer;
-            }
-
-                i.fa-envelope-o:hover {
-                    color: yellow;
-                    transform: scale(1.2);
-                }
-
-            .panel-statistics {
-                background-color: #fd9426;
-                color: white
-            }
-
-            .panel-projects {
-                background-color: #147efb;
+            a.badge.removeTicketAttach:hover {
+                background-color: orangered;
                 color: white;
             }
 
+        a.badge.downloadTicketAttach {
+            background-color: darkblue;
+            color: lightgray;
+        }
 
-            .panel-heading {
-                background: #e53238!important;
-                color: #fff!important;
-                text-transform: uppercase!important;
+            a.badge.downloadTicketAttach:hover {
+                background-color: blue;
+                color: white;
             }
-            /*div.panel-red {
+
+        a.badge.previewTicketAttach {
+            background-color: black;
+            color: gray;
+        }
+
+            a.badge.previewTicketAttach:hover {
+                background-color: dimgray;
+                color: white;
+            }
+
+        a.badge:hover {
+            background-color: lightgray;
+            color: blue;
+        }
+
+        a#addAttachBtn:hover {
+            background-color: #cae3f7 !important;
+            color: #007ee5;
+        }
+
+        i.fa-envelope-o {
+            cursor: pointer;
+        }
+
+            i.fa-envelope-o:hover {
+                color: yellow;
+                transform: scale(1.2);
+            }
+
+        .panel-statistics {
+            background-color: #fd9426;
+            color: white
+        }
+
+        .panel-projects {
+            background-color: #147efb;
+            color: white;
+        }
+
+
+        .panel-heading {
+            background: #0b7bc1!important;
+            color: #fff !important;
+            text-transform: uppercase !important;
+        }
+        .panel{
+            border:none;
+        }
+        /*div.panel-red {
             -webkit-box-shadow: 0px 1px 1px 1px rgba(0,0,0,0.15);
             -moz-box-shadow: 0px 1px 1px 1px rgba(0,0,0,0.15);
             box-shadow: 0px 1px 1px 1px rgba(0,0,0,0.15);
         }*/
-            .panel.body{
-                border-width:0 1px 1px 1px;
-                border-style:solid;
-                border-color:lightgray;
-                border-top-left-radius:0;
-                border-top-right-radius:0;
-                padding:15px;
-            }
-
+        .panel.body {
+            border-width: 0 1px 1px 1px;
+            border-style: solid;
+            border-color: lightgray;
+            border-top-left-radius: 0;
+            border-top-right-radius: 0;
+            padding: 15px;
+        }
+        div.clearfix{
+            height:30px;
+        }
+        .no-margin-style{
+            margin-right:0px;
+            margin-left:0px;
+        }
+        .bottom_info_social{
+            margin-top:1em;
+        }
+        .agile_w3l_social_media_text h4 {
+            font-size:1em;
+        }
+        .teamAvatar{
+            width:70%!important;
+        }
     </style>
     <link href="~/Content/Timeline.css" rel="stylesheet" />
 </head>
@@ -157,7 +175,6 @@
 
 
 
-<div class="bugs-begone-presentation">
 <div class="row">
     <h3>
         "@Model.Title" Ticket Dashboard
@@ -165,96 +182,10 @@
     <h5 style="margin-left:1%;color:dimgray;font-style:italic;">Description: @Model.Description</h5>
 </div>
 
-
-<hr />
-<table class="table">
-    <tr>
-        @*<th>
-                Title
-            </th>*@
-        <th>
-            Project Name
-        </th>
-        <th>
-            Priority
-        </th>
-
-        <th>
-            Status
-        </th>
-        <th>
-            Type
-        </th>
-        <th>
-            Assigned Developer
-        </th>
-        <th>
-            Created by
-        </th>
-        <th>
-            Created Date
-        </th>
-        <th>
-
-        </th>
-    </tr>
-
-    <tr>
-        @*<td>
-                @Html.DisplayFor(model => model.Title)
-            </td>*@
-        <td>
-            @Html.DisplayFor(model => model.Project.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(model => model.TicketPriority.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(model => model.TicketStatus.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(model => model.TicketType.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(model => model.AssignedToUser.FullName)
-            @if (User.IsInRole("Manager") || User.IsInRole("Admin") && Model.AssignedToUser == null)
-            {
-                @Html.ActionLink("Assign", "AssignTicket", "Tickets", new { id = Model.Id }, new { @class = "label label-danger" })
-            }
-            @if (User.IsInRole("Manager") || User.IsInRole("Admin") && Model.AssignedToUser != null)
-            {
-                @Html.ActionLink("Reassign", "AssignTicket", "Tickets", new { id = Model.Id }, new { @class = "label label-danger" })
-            }
-        </td>
-        <td>
-            @Html.DisplayFor(model => model.OwnerUser.FullName)
-        </td>
-        <td>
-            @Html.DisplayFor(model => model.Created)
-        </td>
-        <td>
-            @Html.ActionLink("Edit Ticket", "Edit", "Tickets", new { id = Model.Id }, new { @class = "label label-danger" })
-            @if (User.IsInRole("Developer"))
-            {
-                <button class="label label-danger">Mark as In Progress</button>
-                <br />
-            }
-            @if (User.IsInRole("Manager"))
-            {
-                <button class="label label-success">Mark as Completed</button>
-
-            }
-
-        </td>
-    </tr>
-</table>
-<br>
-
-@*<h3>Ticket Team</h3>*@
-<hr />
+<div class="clearfix"></div>
 <div class="social_media_w3ls">
 
-    <div class="row">
+    <div class="row no-margin-style">
         @foreach (var user in ticketProjectTeam)
         {
             if (user == null)
@@ -263,7 +194,7 @@
             }
             else if (roleHelper.IsUserInRole(user.Id, "Admin"))
             {
-                <div class="col-md-3 socail_grid_agile facebook">
+                <div class="col-md-3 socail_grid_agile facebook" style="height:150px!important;">
                     <ul class="icon_w3_info">
                         <li><a href="#" class="wthree_facebook"> @*<i class="fa fa-facebook" aria-hidden="true"></i>*@</a></li>
                         <li>Ticket Administrator</li>
@@ -304,7 +235,7 @@
             else if (roleHelper.IsUserInRole(user.Id, "Manager"))
             {
 
-                <div class="col-md-3 socail_grid_agile twitter">
+                <div class="col-md-3 socail_grid_agile twitter" style="height:150px!important;">
                     <ul class="icon_w3_info">
                         @*<li><a href="#" class="wthree_facebook"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>*@
                         <li>Ticket Manager</li>
@@ -341,7 +272,7 @@
             }
             else if (roleHelper.IsUserInRole(user.Id, "Developer") && user.Roles != null)
             {
-                <div class="col-md-3 socail_grid_agile gmail">
+                <div class="col-md-3 socail_grid_agile gmail" style="height:150px!important;">
                     <ul class="icon_w3_info">
                         @*<li><a href="#" class="wthree_facebook"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>*@
                         <li>Ticket Developer</li>
@@ -380,7 +311,7 @@
             else if (roleHelper.IsUserInRole(user.Id, "Submitter"))
             {
 
-                <div class="col-md-3 socail_grid_agile dribble padding-bottom">
+                <div class="col-md-3 socail_grid_agile dribble padding-bottom" style="height:150px!important;">
 
                     <ul class="icon_w3_info">
                         @*<li><a href="#" class="wthree_facebook"><i class="fa fa-dribbble" aria-hidden="true"></i></a></li>*@
@@ -465,7 +396,98 @@
         }
     </div>
 </div>
-<hr />
+<br>
+
+@*<h3>Ticket Team</h3>*@
+<div class="clearfix"></div>
+<table class="table">
+    <tr>
+        @*<th>
+                Title
+            </th>*@
+        <th>
+            Project Name
+        </th>
+        <th>
+            Priority
+        </th>
+
+        <th>
+            Status
+        </th>
+        <th>
+            Type
+        </th>
+        <th>
+            Assigned Developer
+        </th>
+        <th>
+            Created by
+        </th>
+        <th>
+            Created Date
+        </th>
+        <th>
+
+        </th>
+    </tr>
+
+    <tr>
+        @*<td>
+                @Html.DisplayFor(model => model.Title)
+            </td>*@
+        <td>
+            @Html.DisplayFor(model => model.Project.Name)
+        </td>
+        <td>
+            @Html.DisplayFor(model => model.TicketPriority.Name)
+        </td>
+        <td>
+            @Html.DisplayFor(model => model.TicketStatus.Name)
+        </td>
+        <td>
+            @Html.DisplayFor(model => model.TicketType.Name)
+        </td>
+        <td>
+            @Html.DisplayFor(model => model.AssignedToUser.FullName)
+            @if (User.IsInRole("Manager") && Model.AssignedToUser == null || User.IsInRole("Admin") && Model.AssignedToUser == null)
+            {
+
+                @Html.ActionLink("Assign", "AssignTicket", "Tickets", new { id = Model.Id }, new { @class = "label label-danger" })
+            }
+
+            @if (User.IsInRole("Manager") && Model.AssignedToUser != null || User.IsInRole("Admin") && Model.AssignedToUser != null)
+            {
+                @Html.ActionLink("Reassign", "AssignTicket", "Tickets", new { id = Model.Id }, new { @class = "label label-danger" })
+            }
+        </td>
+        <td>
+            @Html.DisplayFor(model => model.OwnerUser.FullName)
+        </td>
+        <td>
+            @Html.DisplayFor(model => model.Created)
+        </td>
+        <td>
+            @Html.ActionLink("Edit Ticket", "Edit", "Tickets", new { id = Model.Id }, new { @class = "label label-danger" })
+            @if (User.IsInRole("Developer") && Model.TicketStatus.Name == "Assigned")
+            {
+                @Html.ActionLink("Mark In Progress", "MarkInProgress", "Tickets", new { id = Model.Id }, new { @class = "label label-danger" })
+
+
+                @*<button class="label label-danger" name="MarkInProgress">Mark as In Progress</button>
+                    <br />*@
+            }
+
+            @if (User.IsInRole("Developer") && Model.TicketStatus.Name == "In Progress")
+            {
+                @Html.ActionLink("Mark As Completed", "MarkAsCompleted", "Tickets", new { id = Model.Id }, new { @class = "label label-success" })
+            }
+
+        </td>
+    </tr>
+</table>
+
+<div class="clearfix"></div>
 
 <div class="row">
     <div class="col-md-4">
@@ -640,7 +662,7 @@
                             </div>
                         }
                         <br />
-                        <hr />
+                        <div class="clearfix"></div>
                     }
                 }
                 <div class="row">
@@ -789,10 +811,19 @@
         @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
         @Html.ActionLink("Back to List", "Index")
     </p>}*@
- </div>
+
 
 @section scripts{
+   
+   
+        
     <script>
+        $("#hidebtn").click(function () {
+            $(this).hide();
+        });
+
+
+
         $('#ticket-history-panel').niceScroll();
         function toggleAddAttachmentForm() {
             event.preventDefault();
@@ -821,10 +852,7 @@
                 $(this).attr('title', 'expand');
             }
         });
-
-
-
-
+   
 
         //Message Sent Alert
         function showSuccessMessage(data) {
@@ -843,4 +871,6 @@
             $('#' + modalId).modal('show');
         }
     </script>
+
 }
+
