--- a/LKaifer_BugTracker/Views/Projects/Create.cshtml
+++ b/LKaifer_BugTracker/Views/Projects/Create.cshtml
@@ -35,7 +35,7 @@
             </div>
         </div>
 
-        <button type="submit" class="shrink" style="background-color:#E53238; color:antiquewhite">
+        <button type="submit" class="shrink" style="background-color:#0b7bc1; color:antiquewhite">
             Create New Project
         </button>
 
