--- a/LKaifer_BugTracker/Views/Projects/Index.cshtml
+++ b/LKaifer_BugTracker/Views/Projects/Index.cshtml
@@ -80,7 +80,7 @@
     </tbody>
 </table>
 
-<button type="button" class="grow" style="background-color:#E53238; color:antiquewhite !important">
+<button type="button" class="grow" style="background-color:#0b7bc1; color:antiquewhite !important">
     @Html.ActionLink("Create New Project", "Create")
 </button>
 
